# Sakura_K

./: .env  .env.example  .env.test  .gitignore  README.md  alembic_example.ini  main.py  pyproject.toml  requirements.txt
alembic/: README.md  env.py
application/: settings.py  urls.py
application/config/: development_example.py  production_example.py
apps/cruds/: __init__.py  auth_crud.py  auth_role_crud.py  auth_user_crud.py  bilibili_hot_new_crud.py  help_crud.py  images_crud.py  record_crud.py  record_operation_crud.py  scheduler_task_list_crud.py  scheduler_task_record_crud.py  system_crud.py
apps/cruds/base/: __init__.py  mongo.py  orm.py
apps/depends/: Paging.py  current.py  login.py  login_manage.py
apps/depends/validation/: __init__.py  auth.py  login.py
apps/models/: __init__.py  auth_role_model.py  auth_user_model.py  auth_user_to_role_model.py  dept_model.py  dict_details_model.py  dict_type_model.py  help_issue.py  images_model.py  issue_model.py  login_model.py  menu_model.py  role_model.py  settings_model.py  settings_table_model.py  sms_model.py  user_model.py
apps/models/base/: __init__.py  orm.py
apps/routers/analysis/: __init__.py  views.py
apps/routers/auth/: __init__.py  params.py  views.py
apps/routers/auth_role/: __init__.py  params.py  views.py
apps/routers/auth_user/: __init__.py  params.py  params、.py  services.py  views.py
apps/schemas/: __init__.py  auth_role_schema.py  auth_user_schema.py  bilibili_hot_new_schema.py  dept_schema.py  dict_schema.py  images_schema.py  issue_category_schema.py  issue_m2m_schema.py  issue_schema.py  login_schema.py  menu_schema.py  operation_schema.py  record_operation_schema.py  role_schema.py  scheduler_task_list_schema.py  scheduler_task_record_schema.py  settings_schema.py  settings_tab_schema.py  sms_schema.py  task_schema.py  user_schema.py
apps/system/: __init__.py
apps/tasks/: __init__.py
core/: dependencies.py  event.py  exception.py  logger.py  middleware.py  mongo_manage.py  mysql_manage.py  register.py  types.py
db/: async_base.py  database_factory.py
db/mongo/: __init__.py  asyncio.py
db/orm/: __init__.py  async_base_model.py  asyncio.py
db/redis/: __init__.py  asyncio.py
scripts/create_app/: main.py
scripts/initialize/: initialize.py
task/: __init__.py  main.py  schema.py
task/utils/: __init__.py  listener.py  scheduler.py  scheduler_task_list.py  scheduler_task_record.py
utils/: cache.py  db_getter.py  ip_manage.py  response.py  response_code.py  singleton.py  tools.py  validator.py
utils/excel/: excel_manage.py  write_xlsx.py
utils/file/: file_base.py  file_manage.py
utils/sms/: aliyun.py
(+92 files in other folders)
