[tool.poetry]
name = "Sakura_K"
version = "3.10.1"
description = "FastAPI 技术栈最佳实践"
authors = ["ranyong <ranyong1209@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "0.8.0"
aiohttp = "^3.9.5"
aiomysql = "^0.2.0"
aiopathlib = "^0.5.0"
aioredis = "^2.0.1"
aioshutil = "^1.4"
aiosignal = "^1.3.1"
alembic = "^1.13.1"
alibabacloud-credentials = "^0.3.3"
alibabacloud-dysmsapi20170525 = "^2.0.24"
alibabacloud-endpoint-util = "^0.0.3"
alibabacloud-gateway-spi = "^0.0.1"
alibabacloud-openapi-util = "^0.2.2"
alibabacloud-tea-openapi = "^0.3.9"
alibabacloud-tea-util = "^0.3.12"
alibabacloud-tea-xml = "^0.0.2"
aliyun-python-sdk-core = "^2.15.1"
aliyun-python-sdk-kms = "^2.16.3"
annotated-types = "^0.7.0"
anyio = "^4.4.0"
asgiref = "^3.8.1"
async-timeout = "^4.0.3"
asyncmy = "^0.2.9"
attrs = "^23.2.0"
bcrypt = "^4.1.3"
certifi = "^2024.6.2"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
colorama = "^0.4.6"
comtypes = "^1.4.2"
crcmod = "^1.7"
cryptography = "^42.0.7"
distro = "^1.9.0"
dnspython = "^2.6.1"
ecdsa = "^0.19.0"
et-xmlfile = "^1.1.0"
exceptiongroup = "^1.2.1"
fastapi = "^0.111.0"
frozenlist = "^1.4.1"
greenlet = "^3.0.3"
gunicorn = "^22.0.0"
h11 = "^0.14.0"
httpcore = "^1.0.5"
httptools = "^0.6.1"
httpx = "^0.27.0"
idna = "^3.7"
importlib-metadata = "^7.1.0"
importlib-resources = "^6.4.0"
loguru = "^0.7.2"
mako = "^1.3.5"
markupsafe = "^2.1.5"
motor = "^3.4.0"
multidict = "^6.0.5"
openai = "^1.30.5"
openpyxl = "^3.1.3"
orjson = "^3.10.3"
oss2 = "^2.18.5"
packaging = "^24.0"
passlib = "^1.7.4"
pillow = "^10.3.0"
pyasn1 = "^0.6.0"
pycparser = "^2.22"
pycryptodome = "^3.20.0"
pydantic = "^2.7.2"
pydantic-core = "^2.18.3"
pyjwt = "^2.8.0"
pymongo = "^4.7.2"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
pyyaml = "^6.0.1"
redis = "^5.0.4"
requests = "^2.32.3"
rsa = "^4.9"
six = "^1.16.0"
sniffio = "^1.3.1"
sqlalchemy = "^2.0.30"
sqlalchemy-utils = "^0.41.2"
ssim-pil = "^1.0.14"
starlette = "^0.37.2"
tqdm = "^4.66.4"
typer = "^0.12.3"
typing-extensions = "^4.12.1"
ua-parser = "^0.18.0"
user-agents = "^2.2.0"
uvicorn = "^0.30.1"
websockets = "^12.0"
win32-setctime = "^1.1.0"
xlsxwriter = "^3.2.0"
yarl = "^1.9.4"
zipp = "^3.19.1"
zope-event = "^5.0"
zope-interface = "^6.4.post2"
apscheduler = "^3.10.4"
pydantic-settings = "^2.2.1"
requests-toolbelt = "^1.0.0"
filetype = "^1.2.0"
jsonpath = "^0.82.2"
jinja2 = "^3.1.4"
atomic-bomb-engine-py = "^0.3.7"
psutil = "^5.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
